istio-q46i4dse/templates/alb-ingress.yaml
#
# Note: Make sure AWS Load Balancer Controller is installed and configured
#       https://kubernetes-sigs.github.io/aws-load-balancer-controller
#       also, make istio-ingressgateway service as NodePort in istio-system namespace.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }
    alb.ingress.kubernetes.io/certificate-arn: |
      arn:aws:acm:ap-northeast-2:058264080721:certificate/af004e37-faf6-45b7-a0cb-76525c341fe8
  name: gw-ingress
  namespace: istio-system
spec:
  rules:
  - http:
      paths:   
      - backend:
          service:
            name: ssl-redirect
            port: 
              name: use-annotation
        path: /    
        pathType: Prefix  
      - backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 80
        path: /
        pathType: Prefix
